load("@io_machinecode_tools//tools:coverage.bzl", "coverage_html")
load("@io_machinecode_tools//tools:util.bzl", "to_tar")
load("@io_machinecode_tools//tools:ui.bzl", "pkg_app")
load("@io_machinecode_tools//tools/java:javadoc.bzl", "java_doc")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@vaticle_bazel_distribution//maven:rules.bzl", "assemble_maven", "deploy_maven")

package(default_visibility = ["//visibility:public"])

buildifier(
    name = "buildifier",
)

filegroup(
    name = "coverage_data",
    srcs = glob([
        "bazel-out/**/coverage.dat",
    ]),
)

coverage_html(
    name = "coverage",
    srcs = [
        "//core/src/main/java/io/machinecode/vial:srcs",
    ],
    data = [
        "//:coverage_data",
    ],
    tags = ["manual"],
)

java_doc(
    name = "javadoc",
    libs = [
        "//core/src/main/java/io/machinecode/vial",
    ],
    pkgs = [
        "io.machinecode.vial",
    ],
    title = "Vial",
)

to_tar(
    name = "javadoc-tar",
    srcs = [":javadoc"],
    dir = "javadoc",
)

#to_tar(
#    name = "rules-tar",
#    srcs = ["//tools:docs"],
#    dir = "rules",
#)

#pkg_app(
#    name = "site",
#    css = ["//src/main/site:css"],
#    data = [
#        "//src/main/site:icon",
#    ],
#    hash = True,
#    img = [
#        "//src/main/site/img",
#    ],
#    index_html = "//src/main/site:html",
#    deps = [
#        ":javadoc-tar",
#        #        ":rules-tar",
#        "//src/main/adoc:html",
#        "//src/main/adoc:pdf",
#    ],
#)

exports_files([
    "version.txt",
    "workspace-refs.json",
])

assemble_maven(
    name = "assemble",
    developers = {
        "1": [
            "name=Brent Douglas",
            "email=brent.n.douglas@gmail.com",
            "organization=MachineCode",
        ],
    },
    license = "apache",
    project_description = "Vial Collections",
    project_name = "Vial",
    project_url = "https://github.com/BrentDouglas/vial",
    scm_url = "https://github.com/BrentDouglas/vial.git",
    tags = ["manual"],
    target = "//core/src/main/java/io/machinecode/vial",
    version_file = "//:version.txt",
    workspace_refs = "//:workspace-refs.json",
)

deploy_maven(
    name = "deploy",
    release = "https://oss.sonatype.org/service/local/staging/deploy/maven2",
    snapshot = "https://oss.sonatype.org/content/repositories/snapshots",
    tags = ["manual"],
    target = ":assemble",
)
