load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

#skylark_library(
#    name = "rules",
#    srcs = glob(["**/*.bzl"]),
#    deps = ["//tools/java"],
#)

#stardoc(
#    name = "docs",
#    srcs = [
#        "//tools/java:rules",
#    ],
#    format = "html",
#    site_root = "/rules",
#)
